src/test/deca/context/invalid/intermediaire2/elseif/01condition_readint.deca
{
    if (3 < 2) {
        print("Trop petit !");
    } else if ( readInt() ){
        print("Trop grand !");
    }
}